// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`add provider 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"test\\"
    }
  },
  \\"module\\": {
    \\"test\\": {
      \\"providers\\": [
        {
          \\"test\\": \\"test.provider1\\"
        }
      ],
      \\"source\\": \\"./foo\\",
      \\"//\\": {
        \\"metadata\\": {
          \\"path\\": \\"test/test\\",
          \\"uniqueId\\": \\"test\\"
        }
      }
    }
  },
  \\"provider\\": {
    \\"test\\": [
      {
        \\"access_key\\": \\"key\\",
        \\"alias\\": \\"provider1\\"
      }
    ]
  }
}"
`;

exports[`complex providers 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"test\\"
    }
  },
  \\"provider\\": {
    \\"test\\": [
      {
        \\"access_key\\": \\"key\\",
        \\"alias\\": \\"provider1\\"
      },
      {
        \\"access_key\\": \\"key\\",
        \\"alias\\": \\"provider2\\"
      }
    ]
  },
  \\"module\\": {
    \\"test\\": {
      \\"providers\\": [
        {
          \\"test.src\\": \\"test.provider1\\"
        },
        {
          \\"test.dst\\": \\"test.provider2\\"
        }
      ],
      \\"param1\\": \\"name\\",
      \\"param2\\": 1,
      \\"param3\\": [
        \\"id1\\",
        \\"id2\\"
      ],
      \\"source\\": \\"./foo\\",
      \\"//\\": {
        \\"metadata\\": {
          \\"path\\": \\"test/test\\",
          \\"uniqueId\\": \\"test\\"
        }
      }
    }
  }
}"
`;

exports[`minimal configuration 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"test\\"
    }
  },
  \\"module\\": {
    \\"test\\": {
      \\"source\\": \\"./foo\\",
      \\"//\\": {
        \\"metadata\\": {
          \\"path\\": \\"test/test\\",
          \\"uniqueId\\": \\"test\\"
        }
      }
    }
  }
}"
`;

exports[`multiple providers 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"test\\"
    }
  },
  \\"provider\\": {
    \\"test\\": [
      {
        \\"access_key\\": \\"key\\",
        \\"alias\\": \\"provider1\\"
      },
      {
        \\"access_key\\": \\"key\\",
        \\"alias\\": \\"provider2\\"
      }
    ]
  },
  \\"module\\": {
    \\"test\\": {
      \\"providers\\": [
        {
          \\"test\\": \\"test.provider1\\"
        },
        {
          \\"test\\": \\"test.provider2\\"
        }
      ],
      \\"source\\": \\"./foo\\",
      \\"//\\": {
        \\"metadata\\": {
          \\"path\\": \\"test/test\\",
          \\"uniqueId\\": \\"test\\"
        }
      }
    }
  }
}"
`;

exports[`pass variables 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"test\\"
    }
  },
  \\"module\\": {
    \\"test\\": {
      \\"param1\\": \\"name\\",
      \\"param2\\": 1,
      \\"param3\\": [
        \\"id1\\",
        \\"id2\\"
      ],
      \\"source\\": \\"./foo\\",
      \\"//\\": {
        \\"metadata\\": {
          \\"path\\": \\"test/test\\",
          \\"uniqueId\\": \\"test\\"
        }
      }
    }
  }
}"
`;

exports[`reference module 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"test\\"
    }
  },
  \\"module\\": {
    \\"test\\": {
      \\"source\\": \\"./foo\\",
      \\"//\\": {
        \\"metadata\\": {
          \\"path\\": \\"test/test\\",
          \\"uniqueId\\": \\"test\\"
        }
      }
    }
  },
  \\"resource\\": {
    \\"test_resource\\": {
      \\"resource\\": {
        \\"name\\": \\"\${module.test.name}\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/resource\\",
            \\"uniqueId\\": \\"resource\\"
          }
        }
      }
    }
  }
}"
`;

exports[`set variable 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"test\\"
    }
  },
  \\"module\\": {
    \\"test\\": {
      \\"param1\\": \\"value1\\",
      \\"source\\": \\"./foo\\",
      \\"//\\": {
        \\"metadata\\": {
          \\"path\\": \\"test/test\\",
          \\"uniqueId\\": \\"test\\"
        }
      }
    }
  }
}"
`;

exports[`simple provider 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"test\\"
    }
  },
  \\"provider\\": {
    \\"test\\": [
      {
        \\"access_key\\": \\"key\\",
        \\"alias\\": \\"provider1\\"
      }
    ]
  },
  \\"module\\": {
    \\"test\\": {
      \\"providers\\": [
        {
          \\"test\\": \\"test.provider1\\"
        }
      ],
      \\"source\\": \\"./foo\\",
      \\"//\\": {
        \\"metadata\\": {
          \\"path\\": \\"test/test\\",
          \\"uniqueId\\": \\"test\\"
        }
      }
    }
  }
}"
`;
